typeway/tests/compile_fail/sync_handler.rs
// Error: handler must be async.
use typeway::prelude::*;

#[handler]
fn not_async() -> &'static str {
    "hello"
}

fn main() {}
